2010-02-04  Mike Gorse  <mgorse@novell.com>

	* Accessible.cs: Fetch Parent, Name, and Description if we do not
	have cached data for them.

	* Accessible.cs, Application.cs: Fix several exceptions.

	* Registry.cs: Do not create an appliation for an element with no bus
	name.

	* Registry.cs: Make GetAtspiBus internal to be compatible with
	our ndesk-dbus fork.

2010-02-03  Mike Gorse  <mgorse@novell.com>

	* EventBase.cs, EventDocument.cs, EventFocus.cs, EventKeyboard.cs,
	EventMouse.cs, EventObject.cs, EventTerminal.cs, EventWindow.cs,
	Makefile.am: Track at-spi event api, and add wrappers to remove unused
	parameters.

	* StateSet.cs, StateType.cs: use [System.Flags]

	* Table.cs: Fix Caption and Summary.

	* Component.cs, RelationSet.cs, Selection.cs, Table.cs: Internal GetElement refactoring.

	* Accessible.cs, Application.cs, Hypertext.cs: Track at-spi api.

2009-12-03  Mike Gorse  <mgorse@novell.com>

	* Desktop.cs: Remove "On" prefix from event names.

2009-11-24  Mike Gorse  <mgorse@novell.com>

	* Accessible.cs: Fix firing of ChildAdded.

	* Registry.cs: Try when iterating so that the thread does not
	silently abort on an exception.

2009-11-19  Mike Gorse  <mgorse@novell.com>

	* Accessible.cs, Desktop.cs: Set Desktop role.

	* Registry.cs: Start an Iterate thread if startLoop set on init.

	* Registry.cs: Set the Desktop instance as an Application's parent.

2009-11-12  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* Registry.cs: Bus property is now internal instead of public.
	* Makefile.am:
	* AssemblyInfo.cs: Bundle patched ndesk-dbus directly into at-spi-sharp
	with all public types internalized. Set InternalsVisibleTo for tests.

2009-11-12  Mike Gorse  <mgorse@novell.com>

	* Accessible.cs, Component.cs, Selection.cs, Table.cs, RelationSet.cs,
	Application.cs, Registry.cs: Track at-spi changes supporting
	out-of-process accessibles.

2009-10-29  Mike Gorse  <mgorse@novell.com>

	* StateSet.cs: Add constructor and equality operators.
